Implemented cpp for each main object

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ add_library(proto_service STATIC proto/cpp/service.grpc.pb.cc proto/cpp/service.
 add_library(nlohmann_json INTERFACE)
 
 add_library(catalog src/catalog/SchemaCatalog.cpp)
+add_library(logger src/logger/Logger.cpp)
+add_library(bitstream src/bitstream/BitStream.cpp)
 
 add_executable(openCMD src/main.cpp)
 
@@ -20,7 +22,7 @@ target_include_directories(nlohmann_json INTERFACE /app/json-3.11.2/include)
 
 target_link_libraries(catalog PRIVATE nlohmann_json)
 
-target_link_libraries(openCMD PRIVATE catalog proto_service gRPC::grpc++ nlohmann_json)
+target_link_libraries(openCMD PRIVATE logger bitstream catalog proto_service gRPC::grpc++ nlohmann_json)
 
 # add_executable(client test/client.cpp)
 # target_include_directories(client PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/proto/cpp)
